# clarus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  mkdocs.yml
.agents/skills/clarus-llm-setup/: SKILL.md
.agents/skills/clarus-run-demo/: SKILL.md
.agents/skills/clarus-run-gui/: SKILL.md
.agents/skills/clarus-setup/: SKILL.md
.github/: dependabot.yml
.github/workflows/: auto-version-tag.yml  build-edge-aarch64.yml  ci.yml  dependency-review.yml  dependency-submission.yml  deploy-app.yml  deploy-docs.yml  release.yml
analytics/: .gitignore  _redirects  api-docs.html  app.js  app.ts  audit.html  audit.js  audit.ts  documaris-link.js  documaris-link.test.js  documaris-link.test.ts  documaris-link.ts  index.html  live.html  live.js  live.ts  package-lock.json  package.json  status.html  status.ts  tsconfig.json  vite.config.ts  wrangler.toml
analytics/admin/: audit.html  audit.ts  live.html  live.ts  opfs-cache.test.ts  opfs-cache.ts  status-helpers.test.ts  status-helpers.ts  status.html  status.ts
analytics/analysis/: app.js  app.ts  index.html
analytics/data/live/: live_site_sgp_001_audit_chain_1777724430766.parquet  live_site_sgp_001_audit_chain_1777725270815.parquet  live_site_sgp_001_heartbeats_1777724430766.parquet  live_site_sgp_001_heartbeats_1777725270815.parquet  live_site_sgp_002_audit_chain_1777724430766.parquet  live_site_sgp_002_audit_chain_1777725270815.parquet  live_site_sgp_002_heartbeats_1777724430766.parquet  live_site_sgp_002_heartbeats_1777725270815.parquet
analytics/functions/: tsconfig.json
analytics/functions/api/: _zk-fetch.ts  _zk-types.ts  audit-index.js  audit-index.test.js  audit-summary.js  live-index.js  live-index.test.js  status-index.js  status-index.test.js  verify-raw.js  verify-raw.test.js  verify-raw.test.ts  verify-raw.ts  verify.js  verify.test.js  verify.test.ts  verify.ts
analytics/functions/data/: [[path]].js
analytics/maritime/analytics/: app.ts  index.html
analytics/public/: _headers  _redirects  api-docs.html  openapi.json
analytics/scripts/: generate_live_demo.py  generate_synthetic.py
analytics/src/: api-docs.ts
crates/engine/: Cargo.toml
crates/engine/src/: entity.rs  lib.rs  physics.rs  rules.rs
crates/explanation/: Cargo.toml
crates/explanation/src/: explainer.rs  kb.rs  lib.rs  llm.rs
crates/input-adapter/: Cargo.toml
crates/input-adapter/src/: file_replay.rs  lib.rs  main.rs  sealer.rs  unity_udp.rs  validate_profile.rs
docs/: api-reference.md  demo-guide.md  index.md  personas.md  r2-bucket-naming.md  ref-architecture.md  ref-audit-chain.md  ref-r2-data-layout.md  roadmap1-poc.md  ui-personas.md
docs/roadmap/: core-poc.md  index.md
edge/: .gitignore  Cargo.toml  config-bca-q2-fail.env.example  config.env.example  inject_tampered_records.py  restart.sh  run.sh
edge/demo/: rpi5_swap_benchmark.sh
edge/deploy/: README.md  clarus-edge.service  clarus-edge@.service  update.sh
edge/src/: config.rs  db.rs  ingest_ais.rs  main.rs  sim.rs  storage.rs
edge/src/zkp/: green_mark.rs  mod.rs  ot_integrity.rs
fixtures/: audit_chain_demo.json  audit_chain_tampered.json  dual_forklift.csv  forklift_approach.csv  forklift_approach_1frame.csv  high_speed_entry.csv
profiles/demo/: manifest.toml  rules.json
profiles/demo/kb/: EXCLUSION_ZONE_BREACH.txt  PROXIMITY_ALERT.md  TTC_ALERT.md
profiles/sg-bca-greenmark/: manifest.toml  rules.json
profiles/sg-bca-greenmark/kb/: CHILLER_COP_EXCEEDED.md  EUI_PLATINUM_EXCEEDED.md  LPD_PLATINUM_EXCEEDED.md
profiles/sg-maritime-security/: manifest.toml  params.toml  rules.json
profiles/sg-maritime-security/kb/: AIS_TRACK_GAP.txt  RESTRICTED_ZONE_APPROACH.md
profiles/sg-ot-cybersecurity/: manifest.toml  rules.json
profiles/sg-port-compliance/: manifest.toml
profiles/sg-port-safety/: manifest.toml  rules.json
profiles/sg-port-safety/kb/: EXCLUSION_ZONE_BREACH.txt  MPA_CLEARANCE_5M.md  (+1 more)
registry/: bca-sites.json
schemas/: zk-attestation.json  zk-bca-greenmark.json
scripts/: run_llama.sh  sim-unity-udp.py  test-audit.sh  test-e2e.sh
src/: file_replay.rs  lib.rs  main.rs  sealer.rs  unity_udp.rs
src/engine/: entity.rs  physics.rs  rules.rs
src/explanation/: explainer.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js  style.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: audit.rs  explain.rs  lib.rs  main.rs  replay.rs  report.rs
unity/: README.md
unity/Scripts/: ClarusEntity.cs  ClarusUdpExporter.cs  ForkliftPath.cs  VesselPath.cs  ZoneBoundary.cs
(+8 files in other folders)
