[package]
name        = "clarus-edge"
version     = "0.1.0"
edition     = "2021"
description = "EdgeSentry edge daemon — CV stream → physics → sign → DuckDB + S3"
publish     = false

[[bin]]
name = "clarus-edge"
path = "src/main.rs"

[dependencies]
# EdgeSentry library crates
edgesentry-types    = { path = "../../edgesentry-rs/crates/edgesentry-types" }
edgesentry-evaluate = { path = "../../edgesentry-rs/crates/edgesentry-evaluate" }
edgesentry-profile  = { path = "../../edgesentry-rs/crates/edgesentry-profile" }
edgesentry-audit    = { path = "../../edgesentry-rs/crates/edgesentry-audit" }

# S3-compatible storage (R2 + MinIO)
object_store = { version = "0.11", features = ["aws"] }
bytes        = "1"

# Local storage
duckdb = { version = "1", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"

# Config + CLI
dotenvy = "0.15"
clap    = { version = "4", features = ["derive", "env"] }

# Observability
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
