[package]
name = "clarus-input-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clarus-engine = { path = "../engine" }
clarus-explanation = { path = "../explanation" }
edgesentry-audit = { path = "../../../edgesentry-rs/crates/edgesentry-audit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "clarus"
path = "src/main.rs"
