[package]
name        = "clarus-demo"
version     = "0.1.0"
edition     = "2021"
description = "clarus — Physics-based safety monitoring demo"
publish     = false

[lib]
name       = "clarus_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
base64      = "0.22"

edgesentry-ingest   = { path = "../../../edgesentry-rs/crates/edgesentry-ingest" }
edgesentry-compute  = { path = "../../../edgesentry-rs/crates/edgesentry-compute" }
edgesentry-evaluate = { path = "../../../edgesentry-rs/crates/edgesentry-evaluate" }
edgesentry-explain  = { path = "../../../edgesentry-rs/crates/edgesentry-explain" }
edgesentry-report   = { path = "../../../edgesentry-rs/crates/edgesentry-report" }
edgesentry-audit    = { path = "../../../edgesentry-rs/crates/edgesentry-audit" }
edgesentry-assess   = { path = "../../../edgesentry-rs/crates/edgesentry-assess" }
edgesentry-profile  = { path = "../../../edgesentry-rs/crates/edgesentry-profile" }

[profile.dev]
incremental = true

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
